# dynamic_linker

./: AUTHORS  Makefile.am  README  TODO  autogen.sh  configure.ac  my_ldd
include/: libdl_my.h
src/: Makefile  elf-hash.cc  elf-hash.hh  elf-manager.cc  elf-manager.hh  elf.hh  libdl.cc  libdl.hh  libmalloc.hh  loader.s  main.cc  strap.s  strings.cc  strings.hh  syscall.cc  syscall.hh  types.hh  utils.cc  utils.hh  variadic.hh  variadic.hxx  vector.hh  vector.hxx
src/malloc/: block_ops.cc  calloc.cc  free.cc  free_ops.cc  global.cc  helpers.cc  malloc.cc  realloc.cc
tests/: .gdbinit  Makefile  check.c  include  loader.S
tests/custom_libs/: Makefile
tests/custom_libs/include/: allocators.h  defines.h  libc_my.h  libdl.h  print.h  print2.h  print3.h  string.h  syscall.h  types.h
tests/custom_libs/src/: allocators.c  allocators_bops.c  allocators_freeop.c  allocators_global.c  allocators_helpers.c  allocators_internal.h  print.s  print2.c  print3.c  string.c  syscall.S
